--- a/analyzer/CMakeLists.txt
+++ b/analyzer/CMakeLists.txt
@@ -1,6 +1,6 @@
 spicy_add_analyzer(
     NAME ASN
-    PACKAGE_NAME spicy-asn
+    PACKAGE_NAME spicy-asn1
     SOURCES asn.spicy asn1.spicy asn.evt zeek_asn.spicy
     SCRIPTS __load__.zeek main.zeek dpd.sig
 )
